<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightBrown"
    >


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/logo_description"
        app:srcCompat="@drawable/logo"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/welcome" />

    <EditText
        android:id="@+id/editTextTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textStyle="bold"
        android:textColorHint="@color/white"
        android:hint="@string/hint_name"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textStyle="bold"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:hint="@string/hint_password"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/buttonCreateOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/button_create_order"
        android:textColor="@color/darkBrown"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:layout_margin="10dp"/>

</LinearLayout>